edit activities button and version update

--- a/www/templates/usness_activities_further.html
+++ b/www/templates/usness_activities_further.html
@@ -45,6 +45,7 @@
 					<p>Life gets busy and it can be hard to maintain the activities that connect you to your spouse. Use this list in the days and years to come to remind you of how to recharge your Us to keep it strong. Be sure to add to this list as you grow and experience life together as a couple.</p>
 					<br>
 					<input type="submit" value="Save and Continue" class="button button-block button-positive" />
+					<button ui-sref="menu.tabs.usness_activities" class="button button-block button-calm">Edit Answers</button>
 				</div>
 			</div>
 		</form>
