cachie on profile change

--- a/www/templates/cycles_pain_results.html
+++ b/www/templates/cycles_pain_results.html
@@ -20,7 +20,7 @@
 					<img src="img/top-right-arrow.svg" class="top-right-arrow" width="100%" />
 				</div>
 				<div class="middle-left">
-					<h5>Spouse's Copes</h5>
+					<h5>Spouse Copes</h5>
 					<span ng-repeat="(cope, val) in user.spouse_data.usness.copes" ng-if="val">{{cope}}<br /></span>
 					<span ng-repeat="(cope, val) in user.spouse_data.usness.copes_other" ng-if="val">{{val}}<br /></span>
 				</div>
@@ -35,7 +35,7 @@
 				</div>
 				<div class="bottom-middle">
 					<br>
-					<h5>Spouse's Feels</h5>
+					<h5>Spouse Feels</h5>
 					<span ng-repeat="(pain, val) in user.spouse_data.usness.pains" ng-if="val">{{pain}}<br /></span>
 					<span ng-repeat="(pain, val) in user.spouse_data.usness.pains_other" ng-if="val">{{val}}<br /></span>
 				</div>
