--- a/www/templates/cycles_results.html
+++ b/www/templates/cycles_results.html
@@ -20,7 +20,7 @@
 					<img src="img/top-right-arrow.svg" class="top-right-arrow" width="100%" />
 				</div>
 				<div class="middle-left">
-					<h5>Spouse's Actions</h5>
+					<h5>Spouse Actions</h5>
 					<span ng-repeat="(truth, val) in user.spouse_data.usness.actions" ng-if="val">{{truth}}<br /></span>
 					<span ng-repeat="(truth, val) in user.spouse_data.usness.actions_other" ng-if="val">{{val}}<br /></span>
 				</div>
@@ -35,7 +35,7 @@
 				</div>
 				<div class="bottom-middle">
 					<br>
-					<h5>Spouse's Truths</h5>
+					<h5>Spouse Truths</h5>
 					<span ng-repeat="(truth, val) in user.spouse_data.usness.truths" ng-if="val">{{truth}}<br /></span>
 					<span ng-repeat="(truth, val) in user.spouse_data.usness.truths_other" ng-if="val">{{val}}<br /></span>
 				</div>
