linking accounts button

--- a/www/templates/link.html
+++ b/www/templates/link.html
@@ -24,6 +24,7 @@
 				</div>
 				<input type="submit" value="LINK ACCOUNTS" class="button button-block button-positive" />
 			</form>
+			<button ng-click="test_link()" class="button button-block button-calm">Check Spouse Link</button>
 		</div>
 	</ion-content>
 </ion-view>
