--- a/www/templates/cycles.html
+++ b/www/templates/cycles.html
@@ -4,10 +4,10 @@
 </ion-nav-title>
 	<ion-content>
        <h2><img src="img/cycle-icon-small.png" class="cycles-icon" />&nbsp;Pain and Peace Cycles</h2>
-        <a ng-if="!user.User.picture" ui-sref="menu.tabs.photo">
+        <a ng-if="!user.picture" ui-sref="menu.tabs.photo">
 			<img src="img/upload-photo.jpg" alt="Usness" width="100%">
 		</a>
-		<img ng-if="user.User.picture" ng-src="{{DOMAIN + '/uploads/image_'+user.User.id+'.jpg'}}" width="100%">
+		<img ng-if="user.picture" ng-src="{{urlForImage(user.picture)}}" width="100%">
         <div class="padding">
             <p>While some days in your relationship are filled with peace and joy, there are inevitability days when it’s just the opposite between the two of you. It’s been proven that how you and your spouse handle conflict together is a key factor in the health and sustainability of your relationship. Discover not only what’s happening when you fight, but also a clear pathway out of conflict. </p>
             <button ng-if="user.data.pain" ui-sref="menu.tabs.cycles_pain_results" class="button button-block button-calm">Your Pain Cycle</button>
