--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -13,32 +13,26 @@
 			<a ui-sref="menu.tabs.photo" class="button button-block button-calm">Change Photo</a>
 			<form name="profileForm" novalidate="" ng-submit="process('menu.tabs.home',profileForm)">
 				<div class="list list-inset">
-					<h5>Name</h5><span class="profile-name">{{user.User.first_name}} {{user.User.last_name}}</span></div>
+					<h5>Name</h5>
+					<span class="profile-name">{{user.User.first_name}} {{user.User.last_name}}</span>
+				</div>
 				<div class="list list-inset">
 					<h5>Spouse's Name</h5>
 					<button ng-if="!user.Spouse.id" ui-sref="menu.tabs.link" class="button button-block button-calm">Link to Spouse’s Account</button>
-                    <span ng-if="user.Spouse.id" class="profile-name">{{user.Spouse.first_name}} {{user.Spouse.last_name}}</span>
+					<span ng-if="user.Spouse.id" class="profile-name">{{user.Spouse.first_name}} {{user.Spouse.last_name}}</span>
 				</div>
 				<!--Needs Validation-->
 				<div class="list list-inset">
 					<ionic-datepicker input-obj="anniversaryDatePicker" class="item item-input item-icon-right datepicker">
-						<div ng-if="user.User.anniversary">
-							{{user.User.anniversary | date:'MMMM dd, yyyy'}}
-						</div>
-						<div ng-if="!user.User.anniversary">
-							WEDDING ANNIVERSARY
-						</div>
+						<div ng-if="user.User.anniversary">{{user.User.anniversary | date:'MMMM dd, yyyy'}}</div>
+						<div ng-if="!user.User.anniversary">WEDDING ANNIVERSARY</div>
 						<i class="icon ion-calendar icon-calm"></i>
 					</ionic-datepicker>
 				</div>
 				<div class="list list-inset">
 					<ionic-datepicker input-obj="firstdateDatePicker" class="item item-input item-icon-right datepicker">
-						<div ng-if="user.User.first_date">
-							{{user.User.first_date | date:'MMMM dd, yyyy'}}
-						</div>
-						<div ng-if="!user.User.first_date">
-							FIRST DATE ANNIVERSARY
-						</div>
+						<div ng-if="user.User.first_date">{{user.User.first_date | date:'MMMM dd, yyyy'}}</div>
+						<div ng-if="!user.User.first_date">FIRST DATE ANNIVERSARY</div>
 						<i class="icon ion-calendar icon-calm"></i>
 					</ionic-datepicker>
 				</div>
