--- a/www/templates/cycles_pain_results.html
+++ b/www/templates/cycles_pain_results.html
@@ -49,7 +49,10 @@
 		</div>
 		<div class="padding">
 			<form name="painResults"></form>
-			<button ng-click="process('menu.tabs.cycles_pain_results',painResults)" class="button button-block button-calm">Sync with your spouse</button>
+			<button ng-if="!user.Spouse.id" ui-sref="menu.tabs.link" class="button button-block button-calm">Link to Spouse</button>
+			<div ng-if="user.Spouse.id">
+				<button ng-click="process('menu.tabs.cycles_pain_results',painResults)" class="button button-block button-calm">Check for Spouse Update</button>
+			</div>
 			<button ui-sref="menu.tabs.cycles_pain" class="button button-block button-positive">Edit Your Pain Cycle</button>
 			<button ng-if="!user.data.cyclesPeaceResponseForm" ui-sref="menu.tabs.cycles_peace" class="button button-block button-calm">Discover Your Peace Cycle</button>
        		<button ng-if="user.data.cyclesPeaceResponseForm" ui-sref="menu.tabs.cycles_results" class="button button-block button-calm">View Your Peace Cycle</button>
