--- a/www/templates/quizzes_usness_results.html
+++ b/www/templates/quizzes_usness_results.html
@@ -66,7 +66,7 @@
         <br>
         <div class="padding">
 			<button ui-sref="menu.tabs.quizzes" class="button button-block button-positive">Continue</button>
-			<button ui-sref="menu.tabs.quizzes_usness" class="button button-block button-calm">Edit Answers</button>
+			<button ui-sref="menu.tabs.quizzes_usness" class="button button-block button-calm">Retake Quiz</button>
 		</div>
 	</ion-content>
 </ion-view>
